--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,6 +87,11 @@ body {
   margin-right: 32px;
 }
 
+.column p {
+  font-family: Georgia;
+  font-size: 17px;
+}
+
 .news-bites h3 {
   font-size: 16px;
   font-weight: bold;
@@ -147,4 +152,41 @@ body {
   display: flex;
   flex-direction: column;
   width: 300px;
+}
+
+footer {
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+}
+
+.title {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+nav span a {
+  color: black;
 }
